--- a/index.css
+++ b/index.css
@@ -134,9 +134,9 @@ select {
 
 /* container */
 .container {
-	max-width: 1200px;
+	max-width: 1050px;
 	margin: 0 auto;
-	border: 2px solid red;
+	/* border: 2px solid red; */
 }
 .container {
 	background-color: #1f2937;
@@ -160,7 +160,7 @@ ul li {
 /* sections*/
 section {
 	padding: 40px 150px;
-	border: 2px solid blue;
+	/* border: 2px solid blue; */
 }
 /* End of sections */
 
@@ -174,10 +174,26 @@ section {
 	font-size: 24px;
 }
 
-.header_description,
+.hero_button {
+	width: 25%;
+	padding: 5px;
+	color: white;
+	background-color: #3882f6;
+	border-radius: 5px;
+	margin-top: 5px;
+	border: none;
+}
+
+.header_description {
+	width: 40%;
+	/* border: 2px solid red; */
+	display: flex;
+	justify-content: center;
+}
+
 .image_placeholder {
-	width: 50%;
-	border: 2px solid red;
+	width: 60%;
+	/* border: 2px solid red; */
 	display: flex;
 	justify-content: center;
 }
@@ -192,13 +208,24 @@ section {
 }
 
 .hero_secondary_text {
-	font-size: 18px;
+	font-size: 20px;
+	color: #f9faf8;
+}
+
+#hero_secondary_text {
+	color: #f9faf8;
 }
 /* End of header */
 
 /* section_two */
+.section_two {
+	background-color: white;
+}
+
 .section_two h3 {
 	text-align: center;
+	font-size: x-large;
+	margin-bottom: 1.5rem;
 }
 
 .info_cards {
@@ -208,13 +235,13 @@ section {
 
 .card {
 	width: 20%;
-	border: 2px solid yellow;
+	/* border: 2px solid yellow; */
 }
 
 .card_image {
-	height: 150px;
-	width: 150px;
-	border: 2px solid red;
+	height: 100px;
+	width: 100px;
+	border: 2px solid #3882f6;
 	margin: 0 auto;
 	border-radius: 10px;
 }
@@ -229,10 +256,18 @@ section {
 /* section three */
 .section_three {
 	text-align: center;
+	background-color: #e5e7eb;
+}
+
+.section_three q {
+	font-size: 36px;
+	color: #1f2937;
+	font-weight: lighter;
 }
 
 .section_three p {
 	margin-right: -600px;
+	font-weight: bolder;
 }
 
 /* End of section three */
@@ -242,4 +277,41 @@ section {
 	border: 2px solid red;
 	display: flex;
 	justify-content: space-between;
+	background-color: #ffffff;
 }
+
+.action {
+	border: 2px solid red;
+	color: #ffffff;
+	background-color: #3882f6;
+	padding: 20px;
+	display: flex;
+	justify-content: space-around;
+	width: 100%;
+	border-radius: 5px;
+}
+
+.action_text {
+	border: 2px solid red;
+}
+
+.section_four button {
+	margin-top: 10px;
+	background-color: #3882f6;
+	color: #ffffff;
+	border: 1px solid #ffffff;
+	border-radius: 5px;
+	width: 80px;
+}
+
+.action_text_secondary {
+	color: #1f2937;
+}
+/* end of section four */
+
+/* footer */
+.footer_text {
+	text-align: center;
+	color: #ffffff;
+}
+/* end of footer */
